# tokyojungle

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
config/: tokyojungle.toml
docs/: PROGRESS.md  TECHNICAL.md
scripts/: add_traces.py  analyze.py  decrypt_self.py  extract_pkg.py  gen_stubs.py  scan_opds.py
src/: dispatch_glue.cpp  elf_loader.h  hle_imports.h  import_resolver.h  main.cpp  recomp_bridge.h  stubs.cpp  stubs.h
